# tcenum

./: .gitignore  Makefile.am  README.md  configure.ac  tccompile
.github/workflows/: makefile.yml
presentations/: B  Co1  Co2  Co3  Fi22  Fi22:2  Fi23  Fi24  Fi24_dash  HN  HN:2  HS  HS:2  He  He:2  J1  J2  J2:2  J3  J3:2  J4  Ly  M  M11  M12  M12:2  M22  M22:2  M23  M24  McL  McL:2  ON  ON:2  Ru  Suz  Suz:2  Th
src/: tcfrontend.c  tcmain.F
tests/: a5  a5.res  a5.test  m11  m11.res  m11.test  test.sh
